homeserver/homeassistant/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: homeassistant/home-assistant:2023.10
          volumeMounts:
            - name: homeassistant-config
              mountPath: /config
      volumes:
        - name: homeassistant-config
          persistentVolumeClaim:
            claimName: homeassistant-pvc
