homeserver/homeassistant/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  routes:
  - match: Host(`homeassistant.cluster.local`)
    kind: Rule
    services:
    - name: homeassistant
      port: 8123
  - match: Host(`homeassistant.cluster.tail`)
    kind: Rule
    services:
    - name: homeassistant
      port: 8123
